--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create a .love file
       run: |
-        do_not_archive=README.md .gitignore .git/
-        zip -r p2.love . -x $do_not_archive
+        DO_NOT_INCLUDE="README.md .gitignore .git/"
+        zip -r p2.love . -x $DO_NOT_INCLUDE
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
