--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create a .love file
       run: |
-        DO_NOT_INCLUDE="README.md .gitignore .git/\*"
-        zip -r p2.love . -x $DO_NOT_INCLUDE
+        zip -r p2.love . -x README.md -x .gitignore -x .git/*
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
