--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Create a .love file
       run: |
-        zip -r p2.love . -x README.md -x .gitignore -x .git/*
+        zip -r p2.love . -x README.md -x .gitignore -x .git/\* -x .vscode/\* -x .github/\*
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
