--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build game
       run: |
+        chmod +x compile.sh
         ./compile.sh
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
